# bert-diffusion

./: README.md  pyproject.toml
bert-diffusion/: bert.ipynb  bert.py
